--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="./styles/main.css">
 </head>
+
 <body>
+    <article class="potteryList">
+
+    </article>
+
+
     <script src="./scripts/main.js" type="module"></script>
 </body>
 </html>
